# AgriFlow

./: .env  .env.example  .gitignore  README.md  align_daily_data_win.py  analyze_csv.py  backend.md  backend_windows.py  check_pdf.js  coords.txt  fama_scraper.py  feature_engineering_daily_win.py  fetch_weather_state.py  find_text.py  find_text2.py  git_status.txt  next.config.mjs  package-lock.json  package.json  pdf_to_img.py  pdf_to_img_2.py  pnpm-lock.yaml  production_pipeline_win.py  render_verify.py  repair_ui.py  requirement.txt  run_pipeline_win.bat  test_fetch.py  test_pdf.js  train_daily_model_win.py  tsconfig.tsbuildinfo  update.txt  vercel.json  verify_pdf.py
backend/: .gitignore  README.md  agriflow.db  alembic.ini  climate_model_v2.joblib  pyproject.toml
backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
backend/app/adapters/: __init__.py  climate_model_adapter.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  chat_message.py  crop.py  measurement_session.py  plan_version.py  recommendation_run.py
backend/app/routes/: chat.py  (+5 more)
backend/tests/: conftest.py  test_altitude.py  test_api_contracts.py  test_chat_intent.py  test_chat_modify.py  test_chat_question.py  test_climate_adapter.py  test_climate_service.py  test_database.py  test_decision.py  test_explanation_service.py  test_geocoding.py  test_hard_constraints.py  test_llm_service.py  test_measurements.py  test_normalization.py  test_price_service.py  test_recommendation.py  test_request_logging.py  test_revert.py  test_suitability.py
(+86 files in other folders)
